# youtube-crawler-mcp

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  FASTMCP_GUIDE.md  README.md  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  task-definition.json  test_m2story.py
src/: __init__.py  __main__.py  config.py  fastmcp_server.py  models.py  server.py  summarizer.py  transcript_extractor.py  youtube_client.py
